# FastLearnShipment

./: main.py  pyproject.toml  requirements.txt
app/: config.py  main.py  utils.py
app/ai/: rag.py  tools.py  utils.py
app/api/: dependencies.py  router.py
app/api/routers/: chat.py  delivery_partner.py  seller.py  shipment.py
app/core/: exceptions.py  security.py
app/database/: models.py  redis.py  session.py
app/schemas/: delivery_partner.py  enums.py  seller.py  shipment.py
app/services/: base.py  delivery_partner.py  factory.py  notification.py  seller.py  shipment.py  shipment_event.py  user.py
app/templates/: mail_delivered.html  mail_email_verify.html  mail_out_for_delivery.html  mail_placed.html
app/worker/: tasks.py
migrations/: env.py
migrations/versions/: 02345cc3f9db_gen_tags.py  0ad08dc18736_user_verif.py  1d13d2e67780_email_is_unique.py  6bde8efbc0f7_adding_shipment_event.py  78df1f318f42_test_gen.py  7f261476bc36_add_reviews.py  bd511f3759df_delivery_and_timestamps.py
